fix:중복오류 해결

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "common.h": "c",
     "curl.h": "c",
     "json_object.h": "c",
-    "sqlite3.h": "c"
+    "sqlite3.h": "c",
+    "protocol.h": "c"
   },
   // 기본 터미널 일단 제거
   "terminal.integrated.defaultProfile.windows": null,
