fix: 단일, 기간별 급식조회 가능, 첫 로그인 오류 해결

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
     "curl.h": "c",
     "json_object.h": "c",
     "sqlite3.h": "c",
-    "protocol.h": "c"
+    "protocol.h": "c",
+    "db_handler.h": "c"
   },
   // 기본 터미널 일단 제거
   "terminal.integrated.defaultProfile.windows": null,
