feat:name입력받기 기능 추가, 급식조회오류+로그아웃 오류

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,11 @@
     "json_object.h": "c",
     "sqlite3.h": "c",
     "protocol.h": "c",
-    "db_handler.h": "c"
+    "db_handler.h": "c",
+    "chrono": "c",
+    "text_encoding": "c",
+    "typeindex": "c",
+    "typeinfo": "c"
   },
   // 기본 터미널 일단 제거
   "terminal.integrated.defaultProfile.windows": null,
